# qml-taskwarrior-executioner

./: .gitignore  CMakeLists.txt  README.md  qml-taskwarrior-executioner.pro  qml-taskwarrior-executioner_plugin.cpp  qml-taskwarrior-executioner_plugin.h  qmldir  taskwarrior.cpp  taskwarrior.h  test.qml
